Fixing Spacing

--- a/style/style.scss
+++ b/style/style.scss
@@ -63,13 +63,12 @@ navbar{
     flex-direction: column;
     height: 100%;
     color: white;
+    padding-top: 7%;
     padding-bottom: 7%;
-    margin: auto;
     border-bottom: solid 5px #2E7FCE;
     
     h1{
         font-family: 'PT Sans', sans-serif;
-        margin-top: 7%;
         font-size: 3em;
         color: #fff;
     }
